--- a/bls/Forc.toml
+++ b/bls/Forc.toml
@@ -1,7 +1,7 @@
 [project]
 authors = ["HashCloak"]
-entry = "main.sw"
+entry = "fields.sw"
 license = "Apache-2.0"
-name = "bls12-381"
+name = "bls"
 
 [dependencies]
