--- a/tests-bls/Cargo.toml
+++ b/tests-bls/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 license = "Apache-2.0"
 
 [dependencies]
-fuels = { version = "0.17", features = ["fuel-core-lib"] }
+fuels = "0.16.1"
+fuels-abigen-macro = "0.16.1"
 tokio = { version = "1.12", features = ["rt", "macros"] }
 
 [[test]]
