- Commented out some functions which can't compile yet (heavy in fp6) - Added some smaller functions which will be tested indirectly when used in other functions - Added test for mul in fp6 which can't be run yet :(

--- a/tests_bls12_381/Cargo.toml
+++ b/tests_bls12_381/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Elena Fuentes Bongenaar"]
 edition = "2021"
 license = "Apache-2.0"
 
+# change to 0.19
 [dependencies]
 fuels = { version = "0.17", features = ["fuel-core-lib"] }
 tokio = { version = "1.12", features = ["rt", "macros"] }
