- Updated README - Moved tests for bls into testing folder - Included license from dalek-cryptography subtle library

--- a/testing/tests_bls12_381/Forc.toml
+++ b/testing/tests_bls12_381/Forc.toml
@@ -5,4 +5,4 @@ license = "Apache-2.0"
 name = "tests_bls12_381"
 
 [dependencies]
-bls12_381 = { path = "../bls12_381" }
+bls12_381 = { path = "../../bls12_381" }
