--- a/testing/new_tests_bls12_381/Cargo.toml
+++ b/testing/new_tests_bls12_381/Cargo.toml
@@ -8,7 +8,7 @@ license = "Apache-2.0"
 [dev-dependencies]
 fuels = { version = "0.31.1", features = ["fuel-core-lib"] }
 tokio = { version = "1.12", features = ["rt", "macros"] }
-
+fuel-chain-config = { version = "0.14.1", default-features = false }
 [[test]]
 harness = true
 name = "integration_tests"
