- Started p256 folder - Renewed utils library to new Sway/forc version and kept the old version in the utils_old folder - field64 addition implemented - field64 multiplication added but has to be tested

--- a/p256/Forc.toml
+++ b/p256/Forc.toml
@@ -1,7 +1,8 @@
 [project]
 authors = ["HashCloak"]
-entry = "lib.sw"
+entry = "main.sw"
 license = "Apache-2.0"
-name = "utils"
+name = "p256"
 
 [dependencies]
+utils = { path = "../utils" }
