--- a/edwards25519/Forc.toml
+++ b/edwards25519/Forc.toml
@@ -5,4 +5,4 @@ license = "Apache-2.0"
 name = "edwards25519"
 
 [dependencies]
-utils = { path = "../utils" }#todo fix
+utils = { path = "../utils_old" }
