--- a/p256_tests/Cargo.toml
+++ b/p256_tests/Cargo.toml
@@ -14,3 +14,6 @@ tokio = { version = "1.12", features = ["rt", "macros"] }
 harness = true
 name = "integration_tests"
 path = "tests/harness.rs"
+
+[dependencies]
+fuel-core-chain-config = { version = "0.17", default-features = false }
