--- a/testing/p256_tests/field_test/Forc.toml
+++ b/testing/p256_tests/field_test/Forc.toml
@@ -5,5 +5,5 @@ license = "Apache-2.0"
 name = "field_test"
 
 [dependencies]
-p256 = { path = "../../p256" }
-utils = { path = "../../utils" }
+p256 = { path = "../../../p256" }
+utils = { path = "../../../utils" }
