Moved the verifying contract to p256 folder and put the library code in lib folder. Updated references in test code accordingly and ran all tests with sway 0.39.1.

--- a/testing/p256_tests/verifying_test/Forc.toml
+++ b/testing/p256_tests/verifying_test/Forc.toml
@@ -5,5 +5,5 @@ license = "Apache-2.0"
 name = "verifying_test"
 
 [dependencies]
-p256 = { path = "../../../p256" }
+p256 = { path = "../../../p256/lib" }
 utils = { path = "../../../utils" }
