--- a/p256/verifying_contract/Forc.toml
+++ b/p256/verifying_contract/Forc.toml
@@ -5,5 +5,5 @@ license = "Apache-2.0"
 name = "contract"
 
 [dependencies]
-utils = { path = "../utils" }
-p256 = { path = "../p256" }
+utils = { path = "../../utils" }
+p256 = { path = "../lib" }
