--- a/testing/p256_tests/curve_test/Forc.toml
+++ b/testing/p256_tests/curve_test/Forc.toml
@@ -5,5 +5,5 @@ license = "Apache-2.0"
 name = "curve_test"
 
 [dependencies]
-p256 = { path = "../../../p256" }
+p256 = { path = "../../../p256/lib" }
 utils = { path = "../../../utils" }
